// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extraction pipelines query on empty selected no runs match snapshot 1`] = `
Array [
  Object {
    "columns": Array [
      Object {
        "text": "name",
      },
      Object {
        "text": "externalId",
      },
      Object {
        "text": "runId",
      },
      Object {
        "text": "status",
      },
    ],
    "name": "Extraction Pipelines",
    "rows": Array [
      Array [
        "Test 1",
        "test-1",
        1,
        "seen",
      ],
      Array [
        "Test 2",
        "test-2",
        10,
        "succsess",
      ],
      Array [
        "Test 3",
        "test-3",
        100,
        "failure",
      ],
    ],
    "type": "table",
  },
]
`;

exports[`extraction pipelines query on selected no runs match snapshot 1`] = `
Array [
  Object {
    "columns": Array [
      Object {
        "text": "name",
      },
      Object {
        "text": "externalId",
      },
      Object {
        "text": "runId",
      },
      Object {
        "text": "status",
      },
    ],
    "name": "Extraction Pipelines",
    "rows": Array [
      Array [
        "Test 1",
        "test-1",
        1,
        "seen",
      ],
    ],
    "type": "table",
  },
]
`;

exports[`extraction pipelines query on selected with runs match snapshot 1`] = `
Array [
  Object {
    "columns": Array [
      Object {
        "text": "id",
      },
      Object {
        "text": "status",
      },
    ],
    "name": "test-1",
    "rows": Array [
      Array [
        1,
        "seen",
      ],
      Array [
        2,
        "failure",
      ],
      Array [
        3,
        "succsess",
      ],
    ],
    "type": "table",
  },
  Object {
    "columns": Array [
      Object {
        "text": "id",
      },
      Object {
        "text": "status",
      },
    ],
    "name": "test-2",
    "rows": Array [
      Array [
        10,
        "succsess",
      ],
      Array [
        20,
        "seen",
      ],
      Array [
        30,
        "failure",
      ],
    ],
    "type": "table",
  },
  Object {
    "columns": Array [
      Object {
        "text": "id",
      },
      Object {
        "text": "status",
      },
    ],
    "name": "test-3",
    "rows": Array [
      Array [
        100,
        "failure",
      ],
      Array [
        200,
        "succsess",
      ],
      Array [
        300,
        "seen",
      ],
    ],
    "type": "table",
  },
]
`;
